cpp/nth-prime/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.014s
user	0m0.002s
sys	0m0.012s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/nth-prime/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/nth-prime/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/nth-prime/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/nth-prime/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/nth-prime/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/nth-prime/build'
[ 25%] Building CXX object CMakeFiles/nth-prime.dir/nth_prime_test.cpp.o
[ 50%] Building CXX object CMakeFiles/nth-prime.dir/nth_prime.cpp.o
[ 75%] Building CXX object CMakeFiles/nth-prime.dir/test/tests-main.cpp.o
[100%] Linking CXX executable nth-prime
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/nth-prime/build'
[100%] Built target nth-prime
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/nth-prime/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/nth-prime/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/nth-prime/build'
===============================================================================
All tests passed (5 assertions in 5 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/nth-prime/build'
[100%] Built target test_nth-prime
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/nth-prime/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/nth-prime/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/nth-prime.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/nth-prime.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)10825"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
nth_prime.cpp                                 32      32   100%   
nth_prime_test.cpp                            15      15   100%   
test/catch.hpp                                32      27    84%   1642-1643,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                         79      74    93%
------------------------------------------------------------------------------
lines: 93.7% (74 out of 79)
branches: 47.0% (63 out of 134)

real	0m10.976s
user	0m10.044s
sys	0m0.923s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.223s
user	0m0.142s
sys	0m0.083s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 59:0->BodyNode: 59:11->StatementNode: 60:2->TreeNode: 61:70

CMakeLists.txt:66,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.217s
user	0m0.129s
sys	0m0.090s

===============================================================================

Running: clang-format-16 -style=file -i ./nth_prime.cpp ./nth_prime_test.cpp ./nth_prime.h

real	0m0.020s
user	0m0.009s
sys	0m0.011s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./nth_prime.cpp ./nth_prime_test.cpp ./nth_prime.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/nth-prime/nth_prime.h:6:10: fatal error: 'stdexcept' file not found
#include <stdexcept>
         ^~~~~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/nth-prime/nth_prime.h.

real	0m0.693s
user	0m0.652s
sys	0m0.041s


real	0m0.695s
user	0m0.652s
sys	0m0.043s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
12926 warnings generated.
48309 warnings generated.
48309 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/nth-prime/nth_prime.h.
Suppressed 48314 warnings (48309 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m7.315s
user	0m7.230s
sys	0m0.084s
Running: clang-tidy-16 ./nth_prime.cpp ./nth_prime_test.cpp ./nth_prime.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/nth-prime/nth_prime.h:6:10: error: 'stdexcept' file not found [clang-diagnostic-error]
#include <stdexcept>
         ^~~~~~~~~~~


real	0m7.318s
user	0m7.233s
sys	0m0.084s

===============================================================================

